; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/ingenic/extr_jz4780_mmc.c_jz4780_mmc_dma_cb.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/ingenic/extr_jz4780_mmc.c_jz4780_mmc_dma_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }
%struct.jz4780_mmc_dma_desc = type { i32, i64, i32, i32 }
%struct.jz4780_mmc_softc = type { i32, i32, i64, %struct.jz4780_mmc_dma_desc* }

@JZ_DMA_LINK = common dso_local global i32 0, align 4
@JZ_DMA_ENDI = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.TYPE_3__*, i32, i32)* @jz4780_mmc_dma_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @jz4780_mmc_dma_cb(i8* %0, %struct.TYPE_3__* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.jz4780_mmc_dma_desc*, align 8
  %10 = alloca %struct.jz4780_mmc_softc*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %13 = load i8*, i8** %5, align 8
  %14 = bitcast i8* %13 to %struct.jz4780_mmc_softc*
  store %struct.jz4780_mmc_softc* %14, %struct.jz4780_mmc_softc** %10, align 8
  %15 = load i32, i32* %8, align 4
  %16 = load %struct.jz4780_mmc_softc*, %struct.jz4780_mmc_softc** %10, align 8
  %17 = getelementptr inbounds %struct.jz4780_mmc_softc, %struct.jz4780_mmc_softc* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 8
  %18 = load %struct.jz4780_mmc_softc*, %struct.jz4780_mmc_softc** %10, align 8
  %19 = getelementptr inbounds %struct.jz4780_mmc_softc, %struct.jz4780_mmc_softc* %18, i32 0, i32 3
  %20 = load %struct.jz4780_mmc_dma_desc*, %struct.jz4780_mmc_dma_desc** %19, align 8
  store %struct.jz4780_mmc_dma_desc* %20, %struct.jz4780_mmc_dma_desc** %9, align 8
  %21 = load %struct.jz4780_mmc_softc*, %struct.jz4780_mmc_softc** %10, align 8
  %22 = getelementptr inbounds %struct.jz4780_mmc_softc, %struct.jz4780_mmc_softc* %21, i32 0, i32 2
  %23 = load i64, i64* %22, align 8
  store i64 %23, i64* %11, align 8
  store i32 0, i32* %12, align 4
  br label %24

24:                                               ; preds = %89, %4
  %25 = load i32, i32* %12, align 4
  %26 = load i32, i32* %7, align 4
  %27 = icmp slt i32 %25, %26
  br i1 %27, label %28, label %92

28:                                               ; preds = %24
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %30 = load i32, i32* %12, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i64 %31
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 4
  %35 = load %struct.jz4780_mmc_dma_desc*, %struct.jz4780_mmc_dma_desc** %9, align 8
  %36 = load i32, i32* %12, align 4
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds %struct.jz4780_mmc_dma_desc, %struct.jz4780_mmc_dma_desc* %35, i64 %37
  %39 = getelementptr inbounds %struct.jz4780_mmc_dma_desc, %struct.jz4780_mmc_dma_desc* %38, i32 0, i32 3
  store i32 %34, i32* %39, align 4
  %40 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %41 = load i32, i32* %12, align 4
  %42 = sext i32 %41 to i64
  %43 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %40, i64 %42
  %44 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %43, i32 0, i32 0
  %45 = load i32, i32* %44, align 4
  %46 = load %struct.jz4780_mmc_dma_desc*, %struct.jz4780_mmc_dma_desc** %9, align 8
  %47 = load i32, i32* %12, align 4
  %48 = sext i32 %47 to i64
  %49 = getelementptr inbounds %struct.jz4780_mmc_dma_desc, %struct.jz4780_mmc_dma_desc* %46, i64 %48
  %50 = getelementptr inbounds %struct.jz4780_mmc_dma_desc, %struct.jz4780_mmc_dma_desc* %49, i32 0, i32 2
  store i32 %45, i32* %50, align 8
  %51 = load i32, i32* %12, align 4
  %52 = load i32, i32* %7, align 4
  %53 = sub nsw i32 %52, 1
  %54 = icmp slt i32 %51, %53
  br i1 %54, label %55, label %73

55:                                               ; preds = %28
  %56 = load i64, i64* %11, align 8
  %57 = add i64 %56, 24
  store i64 %57, i64* %11, align 8
  %58 = load i64, i64* %11, align 8
  %59 = load %struct.jz4780_mmc_dma_desc*, %struct.jz4780_mmc_dma_desc** %9, align 8
  %60 = load i32, i32* %12, align 4
  %61 = sext i32 %60 to i64
  %62 = getelementptr inbounds %struct.jz4780_mmc_dma_desc, %struct.jz4780_mmc_dma_desc* %59, i64 %61
  %63 = getelementptr inbounds %struct.jz4780_mmc_dma_desc, %struct.jz4780_mmc_dma_desc* %62, i32 0, i32 1
  store i64 %58, i64* %63, align 8
  %64 = load i32, i32* %12, align 4
  %65 = shl i32 %64, 16
  %66 = load i32, i32* @JZ_DMA_LINK, align 4
  %67 = or i32 %65, %66
  %68 = load %struct.jz4780_mmc_dma_desc*, %struct.jz4780_mmc_dma_desc** %9, align 8
  %69 = load i32, i32* %12, align 4
  %70 = sext i32 %69 to i64
  %71 = getelementptr inbounds %struct.jz4780_mmc_dma_desc, %struct.jz4780_mmc_dma_desc* %68, i64 %70
  %72 = getelementptr inbounds %struct.jz4780_mmc_dma_desc, %struct.jz4780_mmc_dma_desc* %71, i32 0, i32 0
  store i32 %67, i32* %72, align 8
  br label %88

73:                                               ; preds = %28
  %74 = load %struct.jz4780_mmc_dma_desc*, %struct.jz4780_mmc_dma_desc** %9, align 8
  %75 = load i32, i32* %12, align 4
  %76 = sext i32 %75 to i64
  %77 = getelementptr inbounds %struct.jz4780_mmc_dma_desc, %struct.jz4780_mmc_dma_desc* %74, i64 %76
  %78 = getelementptr inbounds %struct.jz4780_mmc_dma_desc, %struct.jz4780_mmc_dma_desc* %77, i32 0, i32 1
  store i64 0, i64* %78, align 8
  %79 = load i32, i32* %12, align 4
  %80 = shl i32 %79, 16
  %81 = load i32, i32* @JZ_DMA_ENDI, align 4
  %82 = or i32 %80, %81
  %83 = load %struct.jz4780_mmc_dma_desc*, %struct.jz4780_mmc_dma_desc** %9, align 8
  %84 = load i32, i32* %12, align 4
  %85 = sext i32 %84 to i64
  %86 = getelementptr inbounds %struct.jz4780_mmc_dma_desc, %struct.jz4780_mmc_dma_desc* %83, i64 %85
  %87 = getelementptr inbounds %struct.jz4780_mmc_dma_desc, %struct.jz4780_mmc_dma_desc* %86, i32 0, i32 0
  store i32 %82, i32* %87, align 8
  br label %88

88:                                               ; preds = %73, %55
  br label %89

89:                                               ; preds = %88
  %90 = load i32, i32* %12, align 4
  %91 = add nsw i32 %90, 1
  store i32 %91, i32* %12, align 4
  br label %24

92:                                               ; preds = %24
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
